--- a/friends.html
+++ b/friends.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/95c88f130a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -43,17 +44,21 @@
         <div class="friends__friend friend friend-lg">
           <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
-            <span class="friend__name">Lee JB</span>
-            <span class="friend__status">Shaper</span>
+            <div class="friend__content">
+              <span class="friend__name">Lee JB</span>
+              <span class="friend__status">Shaper</span>
+            </div>
           </div>
         </div>
       </header>
       <div class="friends__plus">
         <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
-          <div class="freind__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
-            <span class="friend__name">Lee JB</span>
+          <div class="friend__column">
+            <img src="images/avatar.jpg" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">Lee JB</span>
+            </div>
           </div>
         </div>
       </div>
@@ -61,8 +66,8 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend-lg">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
-            <div class="friend__contact">
+            <img src="images/avatar.jpg" class="friend__avatar" />
+            <div class="friend__content">
               <span class="friend__name">Lee JB</span>
               <span class="friend__status">Shaper</span>
             </div>
@@ -71,7 +76,7 @@
             <div class="friend__now-listening">
               <span>
                 FTISLAND (FT NOMAD)
-                <i class="fas play"></i>
+                <i class="fas fa-play"></i>
               </span>
             </div>
           </div>
