--- a/find.html
+++ b/find.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/95c88f130a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -40,36 +41,36 @@
     </header>
     <main class="find">
       <header class="find__header">
-        <ul class="find__header">
+        <ul class="find__header-list">
           <li class="find__header-btn header-btn">
-            <span class="header_btn__icon">
+            <span class="header-btn__icon">
               <i class="fas fa-qrcode fa-2x"></i>
             </span>
-            <span class="header_btn__title">
+            <span class="header-btn__title">
               QR code
             </span>
           </li>
           <li class="find__header-btn header-btn">
-            <span class="header_btn__icon">
+            <span class="header-btn__icon">
               <i class="fas fa-user-plus fa-2x"></i>
             </span>
-            <span class="header_btn__title">
+            <span class="header-btn__title">
               Add by Contacts
             </span>
           </li>
           <li class="find__header-btn header-btn">
-            <span class="header_btn__icon">
+            <span class="header-btn__icon">
               <i class="fas fa-passport fa-2x"></i>
             </span>
-            <span class="header_btn__title">
+            <span class="header-btn__title">
               Add by ID
             </span>
           </li>
           <li class="find__header-btn header-btn">
-            <span class="header_btn__icon">
+            <span class="header-btn__icon">
               <i class="far fa-envelope fa-2x"></i>
             </span>
-            <span class="header_btn__title">
+            <span class="header-btn__title">
               Invite
             </span>
           </li>
@@ -81,8 +82,8 @@
         </h5>
         <li class="find__friend friend friend-lg">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
-            <div class="friend__contact">
+            <img src="images/avatar.jpg" class="friend__avatar" />
+            <div class="friend__content">
               <span class="friend__name">Lee JB</span>
               <span class="friend__status">Shaper</span>
             </div>
