--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/95c88f130a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -44,21 +45,22 @@
     <main class="chat">
       <ul class="chats__list">
         <li class="chats__chat chat">
-          <a href="chat.html"></a>
-          <div class="chat__column">
-            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
-            <div class="chat__content">
-              <span class="chat__username">
-                Lynn
-              </span>
-              <span class="chat__preview">
-                Going home!
-              </span>
+          <a href="chat.html">
+            <div class="chats__chat friend friend-lg">
+              <div class="friend__column">
+                <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">JB</span>
+                  <span class="friend__bottom-text">Do your best!</span>
+                </div>
+              </div>
+              <div class="friend__column">
+                <span class="chat__timestamp">
+                  March 8
+                </span>
+              </div>
             </div>
-          </div>
-          <div class="chat__column">
-            <span class="chat__chatstamp">Yesterday</span>
-          </div>
+          </a>
         </li>
       </ul>
     </main>
@@ -71,6 +73,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
