--- a/more.html
+++ b/more.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/95c88f130a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -48,7 +49,7 @@
         <div class="friends__friend friend friend-lg">
           <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
-            <div class="friend__contact">
+            <div class="friend__content">
               <span class="friend__name">Lee JB</span>
               <span class="friend__status">paradeigma95@naver.com</span>
             </div>
@@ -86,22 +87,22 @@
       </header>
       <section class="more__suggestions">
         <h5 class="more__title">Suggetions</h5>
-        <ul class="more__suggestinos-list">
-          <li class="more__suggesion suggesion">
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-quote-right fa-2x"></i>
+              <i class="fas fa-quote-right"></i>
             </span>
             <span class="suggestion__title">Kakao Story</span>
           </li>
-          <li class="more__suggesion suggesion">
+          <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-beer fa-2x"></i>
+              <i class="fas fa-beer"></i>
             </span>
             <span class="suggestion__title">Kakao friend</span>
           </li>
-          <li class="more__suggesion suggesion">
+          <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-gamepad fa-2x"></i>
+              <i class="fas fa-gamepad"></i>
             </span>
             <span class="suggestion__title">Friends Gem</span>
           </li>
