--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/95c88f130a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -28,7 +29,7 @@
     <header class="header">
       <div class="header__header-column">
         <a href="more.html" class="header__back-btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
+          <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">Settings</h1>
       </div>
@@ -41,17 +42,17 @@
     <main class="settings">
       <section class="settings__sections">
         <ul class="settings__list">
-          <li class="settings_setting">
+          <li class="settings__setting">
             <span class="settings__icon">
               <i class="fas fa-lock"></i>
             </span>
             <span class="settings__title">Privacy</span>
           </li>
-          <li class="settings_setting">
+          <li class="settings__setting">
             <span class="settings__icon"><i class="far fa-bell"></i></span>
             <span class="settings__title">Notification</span>
           </li>
-          <li class="settings_setting">
+          <li class="settings__setting">
             <span class="settings__icon"><i class="far fa-user"></i></span>
             <span class="settings__title">Friends</span>
           </li>
