--- a/chat.html
+++ b/chat.html
@@ -58,7 +58,6 @@
           </div>
         </li>
         <li class="sent-message message">
-          <span class="message__timestamp"></span>
           <div class="message__content">
             <span class="message__bubble">
               Thank you see you soon!
@@ -75,7 +74,6 @@
           </div>
         </li>
         <li class="sent-message message">
-          <span class="message__timestamp"></span>
           <div class="message__content">
             <span class="message__bubble">
               Thank you see you soon!
@@ -84,18 +82,19 @@
         </li>
       </ul>
     </main>
-    <div class="chat__write">
-      <div class="chat__write-column">
+    <div class="chat__write-container">
+      <input
+        type="text"
+        class="chat__write"
+        placeholder="Send message"
+        class="chat__write-input"
+      />
+
+      <div class="chat__icon-left chat__icon">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__write-column">
-        <input
-          type="text"
-          placeholder="Send message"
-          class="chat__write-input"
-        />
-      </div>
-      <div class="chat__write-column">
+
+      <div class="chat__icon-right chat__icon">
         <span class="chat__write-icon">
           <i class="far fa-smile-wink"></i>
         </span>
@@ -103,6 +102,9 @@
           <i class="fas fa-microphone"></i>
         </span>
       </div>
+    </div>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small</span>
     </div>
   </body>
 </html>
